--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </head>
   <body>
     <canvas></canvas>
-    <img hidden id="bricks" src="/bricks.png" alt="" />
-    <img hidden id="sprite" src="/sprite.png" alt="" />
+    <img hidden id="bricks" src="./bricks.png" alt="" />
+    <img hidden id="sprite" src="./sprite.png" alt="" />
   </body>
   <script>
     const canvas = document.querySelector("canvas");
